# chimp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENCE  README.md  TODO.md
.github/workflows/: integration-tests.yml  unit-tests.yml
cmake/: chimpConfig.cmake  cmake_config.h.in
doc/: CMakeLists.txt  header.html
examples/: CMakeLists.txt  full.cpp
include/chimp/: app.h  app_builder.h  arg.h  arg_builder.h  chimp.h  common.h  errors.h  exceptions.h  key.h
include/chimp/impl/: app.h  app_builder.h  arg.h  arg_builder.h  exceptions.h
src/: app.cpp  app_builder.cpp  arg.cpp  arg_builder.cpp  errors.cpp  exceptions.cpp
tests/: CMakeLists.txt
tests-integration/: CMakeLists.txt
tests-integration/consumer/: main.cpp
tests/basic_link_library_test/: CMakeLists.txt  main.cpp
tests/cxx_flags_warnings/: CMakeLists.txt  lib.cpp
tests/integration/: CMakeLists.txt
tests/integration/consumer/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  app.cpp  app_builder.cpp  arg.cpp  arg_builder.cpp  chimp_testing_classes.h  errors.cpp  exceptions.cpp
tests/version_macros_test/: CMakeLists.txt  main.cpp
